src/test/deca/syntax/valid/synt/ListExp.deca
// Description:
//    Programme pour tester une liste de declaration
//
// Resultats:
//    ok
//
// Historique:
//    cree le 01/01/2022

{
    int a,b=5,c=54,e;
}
